# python-pipeline

./: .gitignore  README.md  pyproject.toml
src/python_pipeline/: __init__.py  __main__.py  app.py  lib.py
tests/: conftest.py  test_python_pipeline.py
tests/fixtures/: Sample Super Data.xlsx  empty.xlsx
