[project]
name = "python-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Vianna", email = "1708810+dmvianna@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
python-pipeline = "python_pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
